--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1139,6 +1139,13 @@ $menu-item-padding-x: 1rem !default;
 $submenu-padding-y: 0.5rem !default;
 $submenu-padding-x: 1rem !default;
 $menu-width: 16rem !default;
+$menu-collapse-width: 5rem !default;
+$menu-item-collapse-padding-x: 1rem !default;
+$menu-group-collapse-padding-x: 1rem !default;
+$menu-item-menu-group-collapse-padding-x: 2rem !default;
+$submenu-menu-group-collapse-padding-x: 2rem !default;
+$submenu-body-collapse-width: 10rem !default;
+$menu-icon-collapse-padding-y: 0.25rem !default;
 $submenu-icon-transition: transform 0.15s ease-in-out !default;
 $menu-item-hover-color: shade-color($gray-900, 10%) !default;
 $menu-item-hover-bg: $gray-200 !default;
